--- a/dog-profile.html
+++ b/dog-profile.html
@@ -153,7 +153,7 @@
 
 
                     <div class="action-buttons" style="margin-top: 30px;">
-                        <a href="consultation.html" class="btn-primary full-width" id="inquiryBtn">Inquire Today</a>
+                        <a href="#" class="btn-primary full-width" id="inquiryBtn">Inquire Today</a>
                     </div>
 
                 </div>
@@ -245,7 +245,7 @@
             <span class="close-modal">&times;</span>
             <div class="modal-phone-header">
                 <i class="fas fa-phone-alt"></i>
-                <h3>Choose a Trainer</h3>
+                <h3>Choose a Manager</h3>
             </div>
             <div class="trainer-links">
                 <a href="tel:+18183573797" class="trainer-call-btn">
@@ -295,7 +295,7 @@
                 born: 'March 2022',
                 sex: 'Female',
                 training: 'PH1 – Foundation Level',
-                description: 'Dester is a high-drive Belgian Malinois with exceptional focus, confidence, and work ethic. She demonstrates strong prey and food motivation, solid foundational obedience, and a stable, clear-headed temperament. Dester is environmentally confident, well-socialized, and highly responsive to her handler. Currently trained to PH1 (Foundation Level), she is an excellent prospect for advanced sport, personal protection, or professional K9 development. A powerful young female with elite potential, ready to move forward into PH2 training.',
+                description: '<strong>Power. Control. Loyalty.</strong><br><br>Dester is a PH1-trained Belgian Malinois built for real family protection. Calm and stable inside the home, fast and decisive when protection is required. She offers the rare balance of strong working ability and trustworthy family temperament.<br><br>✔ Fast, reliable obedience<br>✔ Clear-headed protection work | PH1<br>✔ Confident, controlled engagement<br>✔ Excellent with children and family life<br>✔ Comfortable in public and home environments<br><br>Dester is for families who want serious security without sacrificing peace at home.<br>Private placement only.',
                 images: [
                     'assets/Dogs/Dester-4-PH1-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Dester-Best-treiner-k9-protection-dog.jpg',
                     'assets/Dogs/Dester-4-PH1-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Dester-Best-treiner-k9-protection-dog1.jpg',
@@ -311,7 +311,7 @@
                 born: 'March 2022',
                 sex: 'Male',
                 training: 'PH1 – Foundation Level',
-                description: 'Berry is a high-drive Belgian Malinois with strong focus, confidence, and a solid PH1 foundation. Well-socialized, stable, and highly responsive to her handler, she’s an ideal young female for sport, protection, or advanced K9 training. Ready to grow into an elite working dog.',
+                description: '<strong>Intensity when needed. Calm when it matters.</strong><br><br>Berry is a powerful PH1 Belgian Malinois with clean obedience and confident protection skills. He transitions effortlessly from focused working dog to relaxed family companion.<br><br>✔ Strong obedience with first-command response<br>✔ Confident protection work | PH1<br>✔ Social, stable temperament<br>✔ Raised around family and children<br>✔ Balanced drive and control<br><br>Berry is built for families seeking elite-level protection with a dependable, social dog.Serious inquiries only.',
                 images: ['assets/Dogs/Berry-4-PH-1-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Berry-Best-treiner-k9-protection-dog.jpg',
                     'assets/Dogs/Berry-4-PH-1-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Berry-Best-treiner-k9-protection-dog1.jpg',
                     'assets/Dogs/Berry-4-PH-1-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Berry-Best-treiner-k9-protection-dog2.jpg',
@@ -325,7 +325,7 @@
                 born: 'April 2024',
                 sex: 'Male',
                 training: '',
-                description: 'Bex is a confident, high-energy German Shorthaired Pointer with strong drive, great focus, and a true love for work. She’s social, people-oriented, and highly responsive to her handler, making her easy and enjoyable to work with. Athletic and mentally sharp, Bex is well suited for detection work, sport, or advanced K9 training. She’s a smart, motivated dog with the right balance of energy, stability, and trainability—ready for her next challenge.',
+                description: '<strong>Athletic. Aware. Family-safe.</strong><br><br>Bex brings speed, intelligence, and clarity into one reliable protection companion. His obedience is sharp, his PH1-level protection is controlled, and his temperament is social and approachable.<br><br>✔ Responsive obedience<br>✔ Controlled protection | PH1 foundation<br>✔ Clear-headed and stable<br>✔ Great with kids and family environments<br>✔ Easy to live with, confident in public<br><br>Bex is ideal for active families who want protection without pressure or aggression.Limited availability.',
                 images: ['assets/Dogs/Bex-2-German-Short-Pointer-DetectionBomb-Dog/German Short Pointer-Dogs-For-Sale-California-Los-Angeles-Male-Bex-Best-treiner-k9-protection-dog.jpg',
                     'assets/Dogs/Bex-2-German-Short-Pointer-DetectionBomb-Dog/German Short Pointer-Dogs-For-Sale-California-Los-Angeles-Male-Bex-Best-treiner-k9-protection-dog1.jpg',
                     'assets/Dogs/Bex-2-German-Short-Pointer-DetectionBomb-Dog/German Short Pointer-Dogs-For-Sale-California-Los-Angeles-Male-Bex-Best-treiner-k9-protection-dog2.jpg',
@@ -338,7 +338,7 @@
                 born: 'June 2025',
                 sex: 'Male',
                 training: '',
-                description: 'Hunter is a confident, high-energy dog with strong drive, focus, and a real love for work. Social, attentive, and highly responsive to his handler, he’s easy and enjoyable to train. Athletic and mentally sharp, Hunter excels in sport, protection, or advanced K9 training. Smart, motivated, and ready for his next challenge, he’s a perfect prospect for an active owner or professional K9 program.',
+                description: '<strong>Serious protection. Serious stability.</strong><br><br>Hunter is a PH1-trained Dutch Shepherd with precise obedience and confident protection skills. He works clean, stays composed, and responds instantly under pressure.<br><br>✔ Professional-level obedience<br>✔ Controlled protection | PH1<br>✔ Calm, confident mindset<br>✔ Excellent with children<br>✔ Stable in home and public settings<br><br>Hunter is built for families who demand reliability, control, and trust.Top-tier placement.',
                 images: ['assets/Dogs/Hunter-1.5-dutch-sheperd-sold/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Male-Hunter-Best-treiner-k9-protection-dog.jpg',
                     'assets/Dogs/Hunter-1.5-dutch-sheperd-sold/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Male-Hunter-Best-treiner-k9-protection-dog1.jpg',
                     'assets/Dogs/Hunter-1.5-dutch-sheperd-sold/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Male-Hunter-Best-treiner-k9-protection-dog2.jpg',
@@ -353,7 +353,7 @@
                 born: 'May 2025',
                 sex: 'Male',
                 training: '',
-                description: 'Shogun is a confident, high-energy dog with strong drive, focus, and a true passion for work. Social, attentive, and highly responsive to his handler, he’s a joy to train and work with. Athletic, smart, and mentally sharp, Shogun excels in sport, protection, or advanced K9 training. Ready for his next challenge, he’s an ideal prospect for active owners or professional K9 programs.',
+                description: '<strong>Presence. Power. Discipline.</strong><br><br>Shogun is a dominant yet controlled Dutch Shepherd with strong obedience and proven PH1 protection work. He commands respect while remaining deeply loyal to his family.<br><br>✔ Sharp obedience and discipline<br>✔ Confident protection | PH1<br>✔ Clear-headed and stable<br>✔ Strong family bond, great with kids<br>✔ Reliable in real-world environments<br><br>Shogun is for clients seeking uncompromising protection with elite control.Private consultations only. ',
                 images: ['assets/Dogs/Shogun-10-month-Dutch-Sheperd/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Male-Shogun-Best-treiner-k9-protection-dog.jpg',
                     'assets/Dogs/Shogun-10-month-Dutch-Sheperd/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Male-Shogun-Best-treiner-k9-protection-dog1.jpg',
                     'assets/Dogs/Shogun-10-month-Dutch-Sheperd/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Male-Shogun-Best-treiner-k9-protection-dog2.jpg',
@@ -366,7 +366,7 @@
                 born: 'February 2024',
                 sex: 'Female',
                 training: '',
-                description: 'Stella is a confident, high-energy Dutch Shepherd with strong drive, focus, and a true love for work. Social, attentive, and highly responsive to her handler, she’s a joy to train and work with. Athletic, smart, and mentally sharp, Stella excels in sport, protection, or advanced K9 training. Ready for her next challenge, she’s an ideal prospect for active owners or professional K9 programs',
+                description: '<strong>Elegant control with real protection.</strong><br><br>Stella combines smooth obedience, confident PH1 protection work, and an affectionate family temperament. She’s alert and capable without being overwhelming.<br><br>✔ Clean obedience and engagement<br>✔ Balanced protection | PH1<br>✔ Social, stable temperament<br>✔ Excellent with children<br>✔ Easy transition into family life<br><br>Stella is ideal for families wanting protection with a softer, intelligent presence.Limited placement available.',
                 images: ['assets/Dogs/Stella-2-Dutch-Sheperd/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Female-Stella-Best-treiner-k9-protection-dog.jpg',
                     'assets/Dogs/Stella-2-Dutch-Sheperd/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Female-Stella-Best-treiner-k9-protection-dog1.jpg',
                     'assets/Dogs/Stella-2-Dutch-Sheperd/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Female-Stella-Best-treiner-k9-protection-dog2.jpg',
@@ -379,7 +379,7 @@
                 born: 'June 2025',
                 sex: 'Male',
                 training: '',
-                description: 'Tank is a bold, high-energy Belgian Malinois with unmatched drive and focus. He’s social, attentive, and highly responsive to his handler, making training effortless and enjoyable. Athletic, intelligent, and mentally sharp, Tank excels in sport, protection, and advanced K9 programs. Ready to take on his next challenge, he’s a top prospect for active owners or professional K9 handlers.',
+                description: '<strong>Power built on control.</strong><br><br>Tank is a strong, driven PH1 Malinois with reliable obedience and serious protection ability. Despite his power, he is calm, affectionate, and family-safe.<br><br>✔ Strong obedience under distraction<br>✔ Intense yet controlled protection | PH1<br>✔ Clear-headed and confident<br>✔ Excellent with kids<br>✔ Loyal and people-oriented<br><br>Tank is for families who want strength, presence, and total reliability.Elite caliber.',
                 images: ['assets/Dogs/Tank-10-month-Old-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Tank-Best-treiner-k9-protection-dog.jpg',
                     'assets/Dogs/Tank-10-month-Old-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Tank-Best-treiner-k9-protection-dog1.jpg',
                     'assets/Dogs/Tank-10-month-Old-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Tank-Best-treiner-k9-protection-dog2.jpg',
@@ -392,7 +392,7 @@
                 born: 'July 2025',
                 sex: 'Female',
                 training: '',
-                description: 'Tarah is a lively and alert Dutch Shepherd with natural instincts and incredible drive. She’s curious, smart, and loves learning new skills, making her a quick and enthusiastic student. With her athletic build and sharp focus, Tarah shows exceptional promise for protection, sport, or advanced K9 programs. Confident, social, and highly trainable, she’s ready to grow into a reliable and elite working dog.',
+                description: '<strong>Balanced. Calm. Trustworthy.</strong><br><br>Tarah is a PH1 Dutch Shepherd with smooth obedience and controlled protection work. She brings stability, awareness, and a loving family temperament.<br><br>✔ Consistent obedience<br>✔ Controlled protection | PH1<br>✔ Calm and social<br>✔ Gentle with children<br>✔ Comfortable in everyday family life<br><br>Tarah is perfect for families seeking dependable protection without stress.Private placement.',
                 images: ['assets/Dogs/Tarah-9-month-Dutch-Sheperd/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Female-Tarah-Best-treiner-k9-protection-dog.jpg',
                     'assets/Dogs/Tarah-9-month-Dutch-Sheperd/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Female-Tarah-Best-treiner-k9-protection-dog1.jpg',
                     'assets/Dogs/Tarah-9-month-Dutch-Sheperd/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Female-Tarah-Best-treiner-k9-protection-dog2.jpg',
@@ -405,7 +405,7 @@
                 born: 'December 2024',
                 sex: 'Male',
                 training: '',
-                description: 'Xamee is a confident and high-energy Belgian Malinois with incredible drive and focus. Smart, alert, and highly responsive to her handler, she loves to work and learn new skills. Athletic and mentally sharp, Xamee excels in protection, sport, or advanced K9 programs. Social, stable, and motivated, she’s ready to grow into an elite working dog.',
+                description: '<strong>Fast response. Clear mind.</strong><br><br>Xamee is a sharp PH1 Malinois with quick obedience and confident protection skills. He’s alert, responsive, and deeply bonded to his family.<br><br>✔ Fast, precise obedience<br>✔ Confident protection work | PH1<br>✔ Stable, social temperament<br>✔ Great with kids and family<br>✔ Reliable in public and home settings<br><br>Xamee is built for families who want elite protection with real companionship.Top 1 caliber.',
                 images: ['assets/Dogs/Xamee-1.5-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Female-Xamee-Best-treiner-k9-protection-dog.jpg',
                     'assets/Dogs/Xamee-1.5-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Female-Xamee-Best-treiner-k9-protection-dog1.jpg',
                     'assets/Dogs/Xamee-1.5-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Female-Xamee-Best-treiner-k9-protection-dog2.jpg',
@@ -451,8 +451,35 @@
             },
         };
 
-        function changeImage(src) {
-            document.getElementById('mainImageDisplay').src = src;
+        let currentImageIndex = 0;
+        let touchStartX = 0;
+        let touchEndX = 0;
+
+        function updateThumbnails() {
+            document.querySelectorAll('.thumb').forEach((t, i) => {
+                if (i === currentImageIndex) {
+                    t.style.opacity = '1';
+                    t.style.border = '2px solid var(--primary-orange)';
+                } else {
+                    t.style.opacity = '0.7';
+                    t.style.border = 'none';
+                }
+            });
+        }
+
+        function changeImage(index, dogImages) {
+            if (!dogImages || dogImages.length === 0) return;
+
+            // Loop index
+            if (index >= dogImages.length) index = 0;
+            if (index < 0) index = dogImages.length - 1;
+
+            currentImageIndex = index;
+            const imgName = dogImages[index];
+            const imgPath = imgName.startsWith('assets/') ? imgName : `assets/images/${imgName}`;
+
+            document.getElementById('mainImageDisplay').src = imgPath;
+            updateThumbnails();
         }
 
         const urlParams = new URLSearchParams(window.location.search);
@@ -475,38 +502,47 @@
             document.title = `${dog.name} - ${dog.breed} | Elite K9 Group`;
 
             // Gallery logic
-            const mainImageDisplay = document.getElementById('mainImageDisplay');
+            const mainImageContainer = document.getElementById('mainImageContainer');
             const galleryThumbs = document.getElementById('galleryThumbs');
 
             if (dog.images && dog.images.length > 0) {
-                // Set main image to first image
-                const firstImg = dog.images[0];
-                mainImageDisplay.src = firstImg.startsWith('assets/') ? firstImg : `assets/images/${firstImg}`;
+                // Initial load
+                changeImage(0, dog.images);
 
                 // Clear and build thumbs
                 galleryThumbs.innerHTML = '';
                 dog.images.forEach((imgName, index) => {
                     const thumb = document.createElement('div');
                     thumb.classList.add('thumb');
-                    if (index === 0) {
-                        thumb.style.opacity = '1';
-                        thumb.style.border = '2px solid var(--primary-orange)';
-                    }
 
                     const imgPath = imgName.startsWith('assets/') ? imgName : `assets/images/${imgName}`;
                     thumb.style.backgroundImage = `url('${imgPath}')`;
-                    thumb.onclick = () => {
-                        changeImage(imgPath);
-                        // Reset all thumbs
-                        document.querySelectorAll('.thumb').forEach(t => {
-                            t.style.opacity = '0.7';
-                            t.style.border = 'none';
-                        });
-                        thumb.style.opacity = '1';
-                        thumb.style.border = '2px solid var(--primary-orange)';
-                    };
+                    thumb.onclick = () => changeImage(index, dog.images);
                     galleryThumbs.appendChild(thumb);
                 });
+                updateThumbnails(); // Sync initial state
+
+                // Touch Events for Swipe
+                mainImageContainer.addEventListener('touchstart', e => {
+                    touchStartX = e.changedTouches[0].screenX;
+                }, { passive: true });
+
+                mainImageContainer.addEventListener('touchend', e => {
+                    touchEndX = e.changedTouches[0].screenX;
+                    handleSwipe();
+                }, { passive: true });
+
+                function handleSwipe() {
+                    const swipeThreshold = 50;
+                    if (touchEndX < touchStartX - swipeThreshold) {
+                        // Swipe Left -> Next Image
+                        changeImage(currentImageIndex + 1, dog.images);
+                    }
+                    if (touchEndX > touchStartX + swipeThreshold) {
+                        // Swipe Right -> Previous Image
+                        changeImage(currentImageIndex - 1, dog.images);
+                    }
+                }
             }
 
             // Update Status Badge (default is Available)
