--- a/future-breeding.html
+++ b/future-breeding.html
@@ -101,43 +101,62 @@
             <h2 class="category-title">Our Studs (Males)</h2>
             <div class="breeding-grid">
 
-                <!-- Male 1 -->
+                <!-- Male 1: Hunter -->
                 <div class="breeding-card">
                     <div class="breeding-img">
-                        <img src="assets/images/titan.jpg" alt="" srcset="">
-
-
+                        <img src="assets/Dogs/Hunter-1.5-dutch-sheperd-sold/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Male-Hunter-Best-treiner-k9-protection-dog.jpg"
+                            alt="Hunter - Dutch Shepherd">
                     </div>
                     <div class="breeding-info">
-                        <h3>Titan</h3>
-                        <span class="breed">German Shepherd (Czech Line)</span>
-                        <p class="bio">Titan is a powerhouse of a dog with extreme drives and a crushing grip. He is
-                            social with family but serious in protection work. His progeny inherit his stability, bone
-                            structure, and clear head. Proven producer of police and sport candidates.</p>
+                        <h3>Hunter</h3>
+                        <span class="breed">Dutch Shepherd (PH1 Trained)</span>
+                        <p class="bio">Hunter is a powerhouse Dutch Shepherd with precise obedience and confident
+                            protection skills. He works clean, stays composed, and is a top-tier prospect for producing
+                            elite working bloodlines.</p>
                         <div class="breeding-specs">
-                            <span class="spec-item">IGP 3</span>
-                            <span class="spec-item">KKL 1</span>
-                            <span class="spec-item">HD/ED Normal</span>
+                            <span class="spec-item">PH1 Foundation</span>
+                            <span class="spec-item">Health Clear</span>
+                            <span class="spec-item">Elite Drive</span>
                         </div>
                     </div>
                 </div>
 
-                <!-- Male 2 -->
+                <!-- Male 2: Berry -->
                 <div class="breeding-card">
                     <div class="breeding-img">
-                        <img src="assets/images/Bolt.jpg" alt="Bolt" srcset="">
-
+                        <img src="assets/Dogs/Berry-4-PH-1-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Berry-Best-treiner-k9-protection-dog.jpg"
+                            alt="Berry - Belgian Malinois">
                     </div>
                     <div class="breeding-info">
-                        <h3>Bolt</h3>
-                        <span class="breed">Belgian Malinois (NVBK Line)</span>
-                        <p class="bio">Bolt brings lightning-fast speed and unshakeable nerves to the table. He is
-                            currently competing in Ringsport at the highest level. He adds drive, athleticism, and
-                            environmental stability to any breeding program.</p>
+                        <h3>Berry</h3>
+                        <span class="breed">Belgian Malinois (PH1 Trained)</span>
+                        <p class="bio">Berry brings intensity when needed and calm when it matters. A powerful Malinois
+                            with clean obedience and confident protection skills, representing the ideal balance of
+                            drive and control.</p>
                         <div class="breeding-specs">
-                            <span class="spec-item">Ring Sport III</span>
-                            <span class="spec-item">FCI Working</span>
-                            <span class="spec-item">EPI Negative</span>
+                            <span class="spec-item">PH1 Certified</span>
+                            <span class="spec-item">Stable Nerve</span>
+                            <span class="spec-item">High Drive</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Male 3: Dester -->
+                <div class="breeding-card">
+                    <div class="breeding-img">
+                        <img src="assets/Dogs/Dester-4-PH1-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Dester-Best-treiner-k9-protection-dog.jpg"
+                            alt="Dester - Belgian Malinois">
+                    </div>
+                    <div class="breeding-info">
+                        <h3>Dester</h3>
+                        <span class="breed">Belgian Malinois (PH1 Trained)</span>
+                        <p class="bio">Power. Control. Loyalty. Dester is built for real family protection. Calm and
+                            stable inside the home, fast and decisive when protection is required for elite working
+                            heritage.</p>
+                        <div class="breeding-specs">
+                            <span class="spec-item">PH1 Trained</span>
+                            <span class="spec-item">Family Safe</span>
+                            <span class="spec-item">Proven Nerve</span>
                         </div>
                     </div>
                 </div>
@@ -147,42 +166,22 @@
             <h2 class="category-title">Our Dams (Females)</h2>
             <div class="breeding-grid">
 
-                <!-- Female 1 -->
+                <!-- Female 1: Stella -->
                 <div class="breeding-card">
                     <div class="breeding-img">
-
-                        <img src="assets/images/Xena.jpg" alt="" srcset="">
+                        <img src="assets/Dogs/Stella-2-Dutch-Sheperd/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Female-Stella-Best-treiner-k9-protection-dog.jpg"
+                            alt="Stella - Dutch Shepherd">
                     </div>
                     <div class="breeding-info">
-                        <h3>Xena</h3>
-                        <span class="breed">German Shepherd (West German)</span>
-                        <p class="bio">Xena is the epitome of the female German Shepherd. She is substantial in size yet
-                            feminine in expression. She is a devoted mother and a fierce personal protector. She
-                            produces puppies with excellent pigment and balanced drives.</p>
+                        <h3>Stella</h3>
+                        <span class="breed">Dutch Shepherd (PH1 Trained)</span>
+                        <p class="bio">Stella combines smooth obedience, confident PH1 protection work, and an
+                            affectionate family temperament. She represents elegant control with real protection
+                            capabilities for future litters.</p>
                         <div class="breeding-specs">
-                            <span class="spec-item">IGP 1</span>
-                            <span class="spec-item">PPD Level 2</span>
-                            <span class="spec-item">OFA Good</span>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Female 2 -->
-                <div class="breeding-card">
-                    <div class="breeding-img">
-                        <img src="assets/images/luna.jpg" alt="" srcset="">
-
-                    </div>
-                    <div class="breeding-info">
-                        <h3>Luna</h3>
-                        <span class="breed">Belgian Malinois</span>
-                        <p class="bio">Luna is a serious working female with deep hunt drive. She is currently an active
-                            narcotics detection dog. We breed her to produce serious working prospects for law
-                            enforcement and military applications.</p>
-                        <div class="breeding-specs">
-                            <span class="spec-item">NNDDA Certified</span>
-                            <span class="spec-item">Active K9</span>
-                            <span class="spec-item">OFA Excellent</span>
+                            <span class="spec-item">PH1 Foundation</span>
+                            <span class="spec-item">Social Nerve</span>
+                            <span class="spec-item">OFA Clear</span>
                         </div>
                     </div>
                 </div>
@@ -193,7 +192,7 @@
                 <h3>Interested in our Breeding Services?</h3>
                 <p style="margin-bottom: 20px; color: var(--text-light);">We offer stud services and puppy reservations.
                     Contact us to discuss your goals.</p>
-                <a href="consultation.html" class="btn-primary">Contact Breeding Manager</a>
+                <a href="#" class="btn-primary" id="breedingContactBtn">Contact Breeding Manager</a>
             </div>
 
         </div>
