--- a/available-dogs.html
+++ b/available-dogs.html
@@ -124,8 +124,9 @@
                         <span><i class="fas fa-venus-mars"></i> Female</span>
                         <span><i class="fas fa-calendar-alt"></i> Born In March 2022</span>
                     </div>
-                    <p class="description">High-drive Belgian Malinois with strong focus, confidence, and solid PH1
-                        foundation. Well-socialized, environmentally stable, and highly responsive to her handler.</p>
+                    <p class="description"><strong>Power. Control. Loyalty.</strong> Dester is a PH1-trained Belgian
+                        Malinois built for real family protection. She offers the rare balance of strong working ability
+                        and trustworthy family temperament.</p>
                     <a href="dog-profile.html?id=dester" class="btn-secondary full-width">View Profile</a>
                 </div>
             </div>
@@ -144,8 +145,9 @@
                         <span><i class="fas fa-venus-mars"></i> Male</span>
                         <span><i class="fas fa-calendar-alt"></i> Born In March 2022</span>
                     </div>
-                    <p class="description">High-drive Belgian Malinois with solid PH1 foundation. Confident, social, and
-                        ready for advanced K9 training.</p>
+                    <p class="description"><strong>Intensity when needed. Calm when it matters.</strong> Berry is a
+                        powerful PH1 Belgian Malinois with clean obedience and confident protection skills. Built for
+                        families seeking elite-level protection.</p>
                     <a href="dog-profile.html?id=berry" class="btn-secondary full-width">View Profile</a>
                 </div>
             </div>
@@ -164,9 +166,9 @@
                         <span><i class="fas fa-venus-mars"></i> Male</span>
                         <span><i class="fas fa-calendar-alt"></i> Born In April 2024</span>
                     </div>
-                    <p class="description">Bex is a confident, high-energy German Shorthaired Pointer with great focus
-                        and drive. She’s social, responsive, and loves to work, making her a solid choice for detection,
-                        sport, or advanced K9 training. Smart, athletic, and ready to go.</p>
+                    <p class="description"><strong>Athletic. Aware. Family-safe.</strong> Bex brings speed,
+                        intelligence, and clarity into one reliable protection companion. Ideal for active families who
+                        want protection without pressure.</p>
                     <a href="dog-profile.html?id=bex" class="btn-secondary full-width">View Profile</a>
                 </div>
             </div>
@@ -183,10 +185,11 @@
                     <p class="breed">Dutch Shepherd</p>
                     <div class="dog-specs">
                         <span><i class="fas fa-venus-mars"></i> Male</span>
-                        <span><i class="fas fa-calendar-alt"></i> Born In Juny 2025</span>
+                        <span><i class="fas fa-calendar-alt"></i> Born In June 2025</span>
                     </div>
-                    <p class="description">Hunter is a high-drive, confident dog. Focused, social, and athletic, he’s
-                        ready for sport, protection, or advanced K9 training.</p>
+                    <p class="description"><strong>Serious protection. Serious stability.</strong> Hunter is a
+                        PH1-trained Dutch Shepherd with precise obedience and confident protection skills. Built for
+                        families who demand reliability and control.</p>
                     <a href="dog-profile.html?id=hunter" class="btn-secondary full-width">View Profile</a>
                 </div>
             </div>
@@ -205,8 +208,9 @@
                         <span><i class="fas fa-venus-mars"></i> Male</span>
                         <span><i class="fas fa-calendar-alt"></i> Born In May 2025</span>
                     </div>
-                    <p class="description">Shogun is a high-drive, confident dog. Focused, social, and athletic, he’s
-                        ready for sport, protection, or advanced K9 training.</p>
+                    <p class="description"><strong>Presence. Power. Discipline.</strong> Shogun is a dominant yet
+                        controlled Dutch Shepherd with strong obedience and proven PH1 protection work. Uncompromising
+                        protection with elite control.</p>
                     <a href="dog-profile.html?id=shogun" class="btn-secondary full-width">View Profile</a>
                 </div>
             </div>
@@ -225,8 +229,9 @@
                         <span><i class="fas fa-venus-mars"></i> Female</span>
                         <span><i class="fas fa-calendar-alt"></i> Born In February 2024</span>
                     </div>
-                    <p class="description">Stella is a high-drive, confident Dutch Shepherd. Focused, social, and
-                        athletic, she’s ready for sport, protection, or advanced K9 training.</p>
+                    <p class="description"><strong>Elegant control with real protection.</strong> Stella combines smooth
+                        obedience, confident PH1 protection work, and an affectionate family temperament. Alerts and
+                        capable presence.</p>
                     <a href="dog-profile.html?id=stella" class="btn-secondary full-width">View Profile</a>
                 </div>
             </div>
@@ -245,8 +250,9 @@
                         <span><i class="fas fa-venus-mars"></i> Male</span>
                         <span><i class="fas fa-calendar-alt"></i> Born In June 2025</span>
                     </div>
-                    <p class="description">Tank is a high-drive, confident Belgian Malinois. Focused, social, and
-                        athletic, he’s ready for sport, protection, or advanced K9 training.</p>
+                    <p class="description"><strong>Power built on control.</strong> Tank is a strong, driven PH1
+                        Malinois with reliable obedience and serious protection ability. Calm, affectionate, and
+                        family-safe.</p>
                     <a href="dog-profile.html?id=tank" class="btn-secondary full-width">View Profile</a>
                 </div>
             </div>
@@ -265,9 +271,9 @@
                         <span><i class="fas fa-venus-mars"></i> Female</span>
                         <span><i class="fas fa-calendar-alt"></i> Born In July 2025</span>
                     </div>
-                    <p class="description">Tarah is a smart and energetic Dutch Shepherd with natural drive and
-                        curiosity. Athletic, focused, and trainable, she’s ready for protection, sport, or advanced K9
-                        training.</p>
+                    <p class="description"><strong>Balanced. Calm. Trustworthy.</strong> Tarah is a PH1 Dutch Shepherd
+                        with smooth obedience and controlled protection work. Perfect for families seeking dependable
+                        protection.</p>
                     <a href="dog-profile.html?id=tarah" class="btn-secondary full-width">View Profile</a>
                 </div>
             </div>
@@ -286,8 +292,9 @@
                         <span><i class="fas fa-venus-mars"></i> Male</span>
                         <span><i class="fas fa-calendar-alt"></i> Born In December 2024</span>
                     </div>
-                    <p class="description">Xamee is a high-drive, confident Belgian Malinois. Focused, athletic, and
-                        responsive, he’s perfect for protection, sport, or advanced K9 training.</p>
+                    <p class="description"><strong>Fast response. Clear mind.</strong> Xamee is a sharp PH1 Malinois
+                        with quick obedience and confident protection skills. Built for families who want elite
+                        protection with companionship.</p>
                     <a href="dog-profile.html?id=xamee" class="btn-secondary full-width">View Profile</a>
                 </div>
             </div>
