--- a/index.html
+++ b/index.html
@@ -294,123 +294,129 @@
 
                 <div class="dog-slider-container">
                     <div class="dog-slider-track">
-                        <!-- Dog 1 -->
-                        <a href="available-dogs.html" class="dog-slide-item">
+                        <!-- Dog 1: Dester -->
+                        <a href="dog-profile.html?id=dester" class="dog-slide-item">
                             <div class="dog-slide-image">
-                                <img src="assets/images/rex-1.jpg" alt="Elliot">
+                                <img src="assets/Dogs/Dester-4-PH1-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Dester-Best-treiner-k9-protection-dog.jpg"
+                                    alt="Dester">
                             </div>
                             <div class="dog-slide-content">
-                                <h3>ELLIOT</h3>
+                                <h3>DESTER</h3>
                                 <div class="divider-gold"></div>
-                                <span class="dog-role">FAMILY PROTECTION DOG</span>
-                                <span class="dog-breed">GERMAN SHEPHERD</span>
-                            </div>
-                        </a>
-
-                        <!-- Dog 2 -->
-                        <a href="available-dogs.html" class="dog-slide-item">
-                            <div class="dog-slide-image">
-                                <img src="assets/images/doberman.jpg" alt="Drago">
-                            </div>
-                            <div class="dog-slide-content">
-                                <h3>DRAGO</h3>
-                                <div class="divider-gold"></div>
-                                <span class="dog-role">FAMILY PROTECTION DOG</span>
-                                <span class="dog-breed">DOBERMAN</span>
-                            </div>
-                        </a>
-
-                        <!-- Dog 3 -->
-                        <a href="available-dogs.html" class="dog-slide-item">
-                            <div class="dog-slide-image">
-                                <img src="assets/images/max-1.jpg" alt="Bax">
-                            </div>
-                            <div class="dog-slide-content">
-                                <h3>BAX</h3>
-                                <div class="divider-gold"></div>
-                                <span class="dog-role">FAMILY PROTECTION DOG</span>
-                                <span class="dog-breed">DUTCH SHEPHERD</span>
-                            </div>
-                        </a>
-
-                        <!-- Dog 4 -->
-                        <a href="available-dogs.html" class="dog-slide-item">
-                            <div class="dog-slide-image">
-                                <img src="assets/images/dutch.jpg" alt="Angus">
-                            </div>
-                            <div class="dog-slide-content">
-                                <h3>ANGUS</h3>
-                                <div class="divider-gold"></div>
-                                <span class="dog-role">FAMILY PROTECTION DOG</span>
-                                <span class="dog-breed">DUTCH SHEPHERD</span>
-                            </div>
-                        </a>
-
-                        <!-- Dog 5 -->
-                        <a href="available-dogs.html" class="dog-slide-item">
-                            <div class="dog-slide-image">
-                                <img src="assets/images/malinu.jpg" alt="Django">
-                            </div>
-                            <div class="dog-slide-content">
-                                <h3>DJANGO</h3>
-                                <div class="divider-gold"></div>
-                                <span class="dog-role">FAMILY PROTECTION DOG</span>
+                                <span class="dog-role">PH1 TRAINED PROTECTOR</span>
                                 <span class="dog-breed">BELGIAN MALINOIS</span>
                             </div>
                         </a>
 
-                        <!-- Dog 6 -->
-                        <a href="available-dogs.html" class="dog-slide-item">
+                        <!-- Dog 2: Berry -->
+                        <a href="dog-profile.html?id=berry" class="dog-slide-item">
                             <div class="dog-slide-image">
-                                <img src="assets/images/bella-1.jpg" alt="Flow">
+                                <img src="assets/Dogs/Berry-4-PH-1-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Berry-Best-treiner-k9-protection-dog.jpg"
+                                    alt="Berry">
                             </div>
                             <div class="dog-slide-content">
-                                <h3>FLOW</h3>
+                                <h3>BERRY</h3>
                                 <div class="divider-gold"></div>
-                                <span class="dog-role">FAMILY PROTECTION DOG</span>
+                                <span class="dog-role">PH1 TRAINED PROTECTOR</span>
                                 <span class="dog-breed">BELGIAN MALINOIS</span>
                             </div>
                         </a>
 
-                        <!-- Dog 7 -->
-                        <a href="available-dogs.html" class="dog-slide-item">
+                        <!-- Dog 3: Bex -->
+                        <a href="dog-profile.html?id=bex" class="dog-slide-item">
                             <div class="dog-slide-image">
-                                <img src="assets/images/german-shepherd.webp" alt="Titan"
-                                    onerror="this.src='assets/images/rex-1.jpg'">
+                                <img src="assets/Dogs/Bex-2-German-Short-Pointer-DetectionBomb-Dog/German Short Pointer-Dogs-For-Sale-California-Los-Angeles-Male-Bex-Best-treiner-k9-protection-dog.jpg"
+                                    alt="Bex">
                             </div>
                             <div class="dog-slide-content">
-                                <h3>TITAN</h3>
+                                <h3>BEX</h3>
                                 <div class="divider-gold"></div>
                                 <span class="dog-role">FAMILY PROTECTION DOG</span>
-                                <span class="dog-breed">GERMAN SHEPHERD</span>
+                                <span class="dog-breed">GERMAN SHORT POINTER</span>
                             </div>
                         </a>
 
-                        <!-- Dog 8 -->
-                        <a href="available-dogs.html" class="dog-slide-item">
+                        <!-- Dog 4: Hunter -->
+                        <a href="dog-profile.html?id=hunter" class="dog-slide-item">
                             <div class="dog-slide-image">
-                                <img src="assets/images/rotriver.jpg" alt="Bruno"
-                                    onerror="this.src='assets/images/doberman.jpg'">
+                                <img src="assets/Dogs/Hunter-1.5-dutch-sheperd-sold/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Male-Hunter-Best-treiner-k9-protection-dog.jpg"
+                                    alt="Hunter">
                             </div>
                             <div class="dog-slide-content">
-                                <h3>BRUNO</h3>
+                                <h3>HUNTER</h3>
                                 <div class="divider-gold"></div>
-                                <span class="dog-role">FAMILY PROTECTION DOG</span>
-                                <span class="dog-breed">ROTTWEILER</span>
+                                <span class="dog-role">PH1 TRAINED PROTECTOR</span>
+                                <span class="dog-breed">DUTCH SHEPHERD</span>
                             </div>
                         </a>
 
-                        <!-- Dog 9 -->
-                        <a href="available-dogs.html" class="dog-slide-item">
+                        <!-- Dog 5: Shogun -->
+                        <a href="dog-profile.html?id=shogun" class="dog-slide-item">
                             <div class="dog-slide-image">
-                                <img src="assets/images/canecorso.jpg" alt="Zara"
-                                    onerror="this.src='assets/images/canecorso.jpg'">
+                                <img src="assets/Dogs/Shogun-10-month-Dutch-Sheperd/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Male-Shogun-Best-treiner-k9-protection-dog3.jpg"
+                                    alt="Shogun">
                             </div>
                             <div class="dog-slide-content">
-                                <h3>ZARA</h3>
+                                <h3>SHOGUN</h3>
                                 <div class="divider-gold"></div>
-                                <span class="dog-role">FAMILY PROTECTION DOG</span>
-                                <span class="dog-breed">CANE CORSO</span>
+                                <span class="dog-role">PH1 TRAINED PROTECTOR</span>
+                                <span class="dog-breed">DUTCH SHEPHERD</span>
+                            </div>
+                        </a>
+
+                        <!-- Dog 6: Stella -->
+                        <a href="dog-profile.html?id=stella" class="dog-slide-item">
+                            <div class="dog-slide-image">
+                                <img src="assets/Dogs/Stella-2-Dutch-Sheperd/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Female-Stella-Best-treiner-k9-protection-dog.jpg"
+                                    alt="Stella">
+                            </div>
+                            <div class="dog-slide-content">
+                                <h3>STELLA</h3>
+                                <div class="divider-gold"></div>
+                                <span class="dog-role">PH1 TRAINED PROTECTOR</span>
+                                <span class="dog-breed">DUTCH SHEPHERD</span>
+                            </div>
+                        </a>
+
+                        <!-- Dog 7: Tank -->
+                        <a href="dog-profile.html?id=tank" class="dog-slide-item">
+                            <div class="dog-slide-image">
+                                <img src="assets/Dogs/Tank-10-month-Old-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Tank-Best-treiner-k9-protection-dog.jpg"
+                                    alt="Tank">
+                            </div>
+                            <div class="dog-slide-content">
+                                <h3>TANK</h3>
+                                <div class="divider-gold"></div>
+                                <span class="dog-role">PH1 TRAINED PROTECTOR</span>
+                                <span class="dog-breed">BELGIAN MALINOIS</span>
+                            </div>
+                        </a>
+
+                        <!-- Dog 8: Tarah -->
+                        <a href="dog-profile.html?id=tarah" class="dog-slide-item">
+                            <div class="dog-slide-image">
+                                <img src="assets/Dogs/Tarah-9-month-Dutch-Sheperd/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Female-Tarah-Best-treiner-k9-protection-dog.jpg"
+                                    alt="Tarah">
+                            </div>
+                            <div class="dog-slide-content">
+                                <h3>TARAH</h3>
+                                <div class="divider-gold"></div>
+                                <span class="dog-role">PH1 TRAINED PROTECTOR</span>
+                                <span class="dog-breed">DUTCH SHEPHERD</span>
+                            </div>
+                        </a>
+
+                        <!-- Dog 9: Xamee -->
+                        <a href="dog-profile.html?id=xamee" class="dog-slide-item">
+                            <div class="dog-slide-image">
+                                <img src="assets/Dogs/Xamee-1.5-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Female-Xamee-Best-treiner-k9-protection-dog.jpg"
+                                    alt="Xamee">
+                            </div>
+                            <div class="dog-slide-content">
+                                <h3>XAMEE</h3>
+                                <div class="divider-gold"></div>
+                                <span class="dog-role">PH1 TRAINED PROTECTOR</span>
+                                <span class="dog-breed">BELGIAN MALINOIS</span>
                             </div>
                         </a>
                     </div>
@@ -516,7 +522,7 @@
                                     </div>
                                     <div>
                                         <h4>Sarah & Family</h4>
-                                        <span>Belgian Malinois Owner</span>
+                                        <span>Bella Owner (Belgian Malinois)</span>
                                     </div>
                                 </div>
                             </div>
@@ -538,7 +544,7 @@
                                     </div>
                                     <div>
                                         <h4>James L.</h4>
-                                        <span>German Shepherd Owner</span>
+                                        <span>Max Owner (Dutch Shepherd)</span>
                                     </div>
                                 </div>
                             </div>
@@ -558,7 +564,7 @@
                                     </div>
                                     <div>
                                         <h4>Michael R.</h4>
-                                        <span>Business Owner</span>
+                                        <span>Rex Owner (German Shepherd)</span>
                                     </div>
                                 </div>
                             </div>
