--- a/future-breeding.html
+++ b/future-breeding.html
@@ -141,25 +141,7 @@
                     </div>
                 </div>
 
-                <!-- Male 3: Dester -->
-                <div class="breeding-card">
-                    <div class="breeding-img">
-                        <img src="assets/Dogs/Dester-4-PH1-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Dester-Best-treiner-k9-protection-dog.jpg"
-                            alt="Dester - Belgian Malinois">
-                    </div>
-                    <div class="breeding-info">
-                        <h3>Dester</h3>
-                        <span class="breed">Belgian Malinois (PH1 Trained)</span>
-                        <p class="bio">Power. Control. Loyalty. Dester is built for real family protection. Calm and
-                            stable inside the home, fast and decisive when protection is required for elite working
-                            heritage.</p>
-                        <div class="breeding-specs">
-                            <span class="spec-item">PH1 Trained</span>
-                            <span class="spec-item">Family Safe</span>
-                            <span class="spec-item">Proven Nerve</span>
-                        </div>
-                    </div>
-                </div>
+
 
             </div>
 
@@ -182,6 +164,26 @@
                             <span class="spec-item">PH1 Foundation</span>
                             <span class="spec-item">Social Nerve</span>
                             <span class="spec-item">OFA Clear</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Female 2: Dester -->
+                <div class="breeding-card">
+                    <div class="breeding-img">
+                        <img src="assets/Dogs/Dester-4-PH1-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Dester-Best-treiner-k9-protection-dog.jpg"
+                            alt="Dester - Belgian Malinois">
+                    </div>
+                    <div class="breeding-info">
+                        <h3>Dester</h3>
+                        <span class="breed">Belgian Malinois (PH1 Trained)</span>
+                        <p class="bio">Power. Control. Loyalty. Dester is built for real family protection. Calm and
+                            stable inside the home, fast and decisive when protection is required for elite working
+                            heritage.</p>
+                        <div class="breeding-specs">
+                            <span class="spec-item">PH1 Trained</span>
+                            <span class="spec-item">Family Safe</span>
+                            <span class="spec-item">Proven Nerve</span>
                         </div>
                     </div>
                 </div>
