--- a/training.html
+++ b/training.html
@@ -292,18 +292,69 @@
             </div>
             <div class="team-gallery">
                 <div class="gallery-item reveal reveal-fade-up">
-                    <img src="assets/images/team-1.jpg" alt="Our Team at Shot Show">
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (1).jpg"
+                        alt="Elite K9 Team Member">
                 </div>
                 <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.1s;">
-                    <img src="assets/images/team-2.jpg" alt="K9 Dog resting">
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (2).jpg"
+                        alt="Elite K9 Team Member">
                 </div>
                 <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.2s;">
-                    <img src="assets/images/team-3.jpg" alt="K9 Dog resting">
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (3).jpg"
+                        alt="Elite K9 Team Member">
                 </div>
                 <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.3s;">
-                    <img src="assets/images/team-4.jpg" alt="Trainer with K9 Dog">
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (4).jpg"
+                        alt="Elite K9 Team Member">
                 </div>
-
+                <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.1s;">
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (5).jpg"
+                        alt="Elite K9 Team Member">
+                </div>
+                <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.2s;">
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (6).jpg"
+                        alt="Elite K9 Team Member">
+                </div>
+                <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.3s;">
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (7).jpg"
+                        alt="Elite K9 Team Member">
+                </div>
+                <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.4s;">
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (8).jpg"
+                        alt="Elite K9 Team Member">
+                </div>
+                <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.1s;">
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (9).jpg"
+                        alt="Elite K9 Team Member">
+                </div>
+                <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.2s;">
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (10).jpg"
+                        alt="Elite K9 Team Member">
+                </div>
+                <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.3s;">
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (11).jpg"
+                        alt="Elite K9 Team Member">
+                </div>
+                <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.4s;">
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (12).jpg"
+                        alt="Elite K9 Team Member">
+                </div>
+                <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.1s;">
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (13).jpg"
+                        alt="Elite K9 Team Member">
+                </div>
+                <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.2s;">
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (14).jpg"
+                        alt="Elite K9 Team Member">
+                </div>
+                <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.3s;">
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (15).jpg"
+                        alt="Elite K9 Team Member">
+                </div>
+                <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.4s;">
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (16).jpg"
+                        alt="Elite K9 Team Member">
+                </div>
             </div>
         </div>
     </section>
