--- a/dog-profile.html
+++ b/dog-profile.html
@@ -245,7 +245,7 @@
             <span class="close-modal">&times;</span>
             <div class="modal-phone-header">
                 <i class="fas fa-phone-alt"></i>
-                <h3>Choose a Manager</h3>
+                <h3>Choose a Trainer</h3>
             </div>
             <div class="trainer-links">
                 <a href="tel:+18183573797" class="trainer-call-btn">
